# hexapoc

./: pyproject.toml
adapter/: google_search.py
app/: application.py  factory.py
cmd/cli/: main.py
cmd/http/: exception.py  helper.py  main.py
domain/core/exception/: errors.py
domain/core/model/: query.py  result.py
domain/core/port/: finder.py  parser.py
domain/core/port/test_double/: finder_stub.py  parser_stub.py
domain/usecase/: search.py  search_test.py
