[tool.poetry]
name = "hexapoc"
version = "0.1.0"
description = "Implementation of hexagonal architecture using flask and cli cmds"
authors = ["martinmaurice24 <martinmaurice24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.1.0"
typer = "^0.13.0"
pydantic = "^2.9.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
